# stringly-rust

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml  test.yaml
src/: de.rs  error.rs  lib.rs  ser.rs  tests.rs  util.rs
